# robot_self_filter

./: CMakeLists.txt  package.xml
include/robot_self_filter/: bodies.h  self_mask.h  self_see_filter.h  shapes.h
src/: bodies.cpp  load_mesh.cpp  self_filter.cpp  self_mask.cpp
