<?xml version="1.0"?>
<package format="3">
  <name>robot_self_filter</name>
  <version>0.2.0</version>
  <description>Filters the robot's body out of point clouds.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/robot_self_filter</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_bullet</depend>
  <depend>filters</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>Bullet</depend>
  <depend>resource_retriever</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>Boost</depend>
<!-- /<depend>assimp-dev</depend>-->
  <depend>tinyxml</depend>
  <depend>assimp</depend>
  <depend>lifecycle_node</depend>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
